--- a/index.html
+++ b/index.html
@@ -212,6 +212,36 @@
                         </p>
                     </div>
                 </div>
+                <div class="card-service shadow-lg rounded card-amortecedor">
+
+                    <div class="card-service-img">
+                        <img src="./assets/images/pneu.jpg" alt="pneu">
+
+                    </div>
+                    <div class="card-service-detail">
+                        <p class="title">
+                            Troca de Amortecedores
+                        </p>
+                        <p class="body open-sans-300">
+                            Oferecemos serviços de troca de amortecedores para garantir uma condução suave e segura. Amortecedores desgastados podem comprometer o conforto e a estabilidade do seu veículo. Agende sua troca conosco e melhore a performance e segurança do seu carro.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-service shadow-lg rounded card-bucha">
+
+                    <div class="card-service-img">
+                        <img src="./assets/images/pneu.jpg" alt="pneu">
+
+                    </div>
+                    <div class="card-service-detail">
+                        <p class="title">
+                            Troca de Buchas e Bandejas
+                        </p>
+                        <p class="body open-sans-300">
+                            Realizamos a troca de buchas e bandejas, componentes essenciais para a estabilidade e alinhamento das rodas do seu veículo. Buchas desgastadas e bandejas danificadas afetam a dirigibilidade e o desgaste dos pneus. Confie em nossos especialistas para manter seu carro em perfeito estado.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="result-guarantee" id="mission">
