--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <div class="card-service shadow-lg rounded card-amortecedor">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/pneu.jpg" alt="pneu">
+                        <img src="./assets/images/amortecedor.jpg" alt="amortecedor">
 
                     </div>
                     <div class="card-service-detail">
@@ -223,14 +223,14 @@
                             Troca de Amortecedores
                         </p>
                         <p class="body open-sans-300">
-                            Oferecemos serviços de troca de amortecedores para garantir uma condução suave e segura. Amortecedores desgastados podem comprometer o conforto e a estabilidade do seu veículo. Agende sua troca conosco e melhore a performance e segurança do seu carro.
+                            Troque seus amortecedores conosco para uma condução mais suave e segura. Amortecedores novos melhoram a estabilidade e o conforto do seu veículo.
                         </p>
                     </div>
                 </div>
                 <div class="card-service shadow-lg rounded card-bucha">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/pneu.jpg" alt="pneu">
+                        <img src="./assets/images/bucha.jpg" alt="bucha">
 
                     </div>
                     <div class="card-service-detail">
@@ -238,7 +238,7 @@
                             Troca de Buchas e Bandejas
                         </p>
                         <p class="body open-sans-300">
-                            Realizamos a troca de buchas e bandejas, componentes essenciais para a estabilidade e alinhamento das rodas do seu veículo. Buchas desgastadas e bandejas danificadas afetam a dirigibilidade e o desgaste dos pneus. Confie em nossos especialistas para manter seu carro em perfeito estado.
+                            Substituímos buchas e bandejas para garantir estabilidade e alinhamento das rodas. Mantenha seu carro seguro e com melhor dirigibilidade.
                         </p>
                     </div>
                 </div>
@@ -324,7 +324,6 @@
                     </div>
                     <div class="best-service-body">
                         <p class="body open-sans-300 text-center">
-
                             Na Carv Auto Center, nos pautamos pelos valores da integridade, qualidade e respeito em cada
                             interação. Valorizamos a confiança depositada por nossos clientes e nos dedicamos a fornecer
                             soluções automotivas eficazes para suas necessidades. Sua satisfação é nossa prioridade
