--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Na Carv Auto Center você vai encontrar soluções confiáveis para suas necessidades automotivas em nossa oficina mecânica. Oferecemos serviços profissionais de reparo e manutenção para garantir que seu veículo funcione sem problemas. Conte com nossa experiência e dedicação para mantê-lo seguro na estrada. Agende sua visita hoje mesmo!">
+    <meta name="description"
+        content="Reparação de freios, Troca de óleo, Alinhamento e Balanceamento, Reparação de pneu, Troca de Amortecedores, Troca de Buchas e Bandejas">
 
     <title>Carv Auto Center</title>
 
