--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
                     </p>
                 </div>
                 <div class="about-us-body">
-                    <p class="body open-sans-300">
+                    <h1 class="body open-sans-300">
                         Seja bem-vindo à Carv Auto Center, seu centro automotivo de confiança em Avaré, SP. Somos
                         dedicados
                         a
                         fornecer serviços de mecânica de alta qualidade para veículos de todos os tipos. Com uma equipe
                         experiente e apaixonada, garantimos atenção especializada a cada veículo que entra em nossas
                         instalações.
-                    </p>
+                    </h1>
                 </div>
             </div>
 
