--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 
     <title>Carv Auto Center</title>
 
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Start Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -225,7 +243,8 @@
                             Troca de Amortecedores
                         </p>
                         <p class="body open-sans-300">
-                            Troque seus amortecedores conosco para uma condução mais suave e segura. Amortecedores novos melhoram a estabilidade e o conforto do seu veículo.
+                            Troque seus amortecedores conosco para uma condução mais suave e segura. Amortecedores novos
+                            melhoram a estabilidade e o conforto do seu veículo.
                         </p>
                     </div>
                 </div>
@@ -240,7 +259,8 @@
                             Troca de Buchas e Bandejas
                         </p>
                         <p class="body open-sans-300">
-                            Substituímos buchas e bandejas para garantir estabilidade e alinhamento das rodas. Mantenha seu carro seguro e com melhor dirigibilidade.
+                            Substituímos buchas e bandejas para garantir estabilidade e alinhamento das rodas. Mantenha
+                            seu carro seguro e com melhor dirigibilidade.
                         </p>
                     </div>
                 </div>
@@ -528,7 +548,7 @@
         </section>
         <a class="btn-whats shadow-lg"
             href="https://wa.me/5514998464904?text=Olá! Estou entrando em contato pelo site e gostaria de agendar um serviço. Podemos conversar mais sobre isso? Aguardo sua resposta. Obrigado!"
-            target="_blank" aria-label="Nosso whatsapp"s rel="noopener noreferrer">
+            target="_blank" aria-label="Nosso whatsapp" s rel="noopener noreferrer">
             <i class="fa-brands fa-whatsapp fa-xl"></i>
         </a>
     </main>
