--- a/index.html
+++ b/index.html
@@ -555,16 +555,16 @@
     <footer class="footer p-2 text-center">
         &copy Carv Auto Center
     </footer>
-    <script src="assets/jQuery/js/jQuery.min.js"></script>
-    <script src="assets/OwlCarousel/dist/owl.carousel.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
-    <script src="https://kit.fontawesome.com/0c233eeafa.js" crossorigin="anonymous"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/header.js"></script>
-    <script src="assets/js/gsap.js"></script>
+    <script src="assets/jQuery/js/jQuery.min.js" defer></script>
+    <script src="assets/OwlCarousel/dist/owl.carousel.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js" defer></script>
+    <script src="https://kit.fontawesome.com/0c233eeafa.js" crossorigin="anonymous" defer></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js" defer></script>
+    <script src="assets/js/owl.js" defer></script>
+    <script src="assets/js/header.js" defer></script>
+    <script src="assets/js/gsap.js" defer></script>
 </body>
 
 </html>
