AJUSTE IMG SERVICE

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="card-service shadow-lg rounded card-representation">
 
                     <div class="card-service-img ">
-                        <img src="./assets/images/breakRepair.jpg" alt="freios">
+                        <img src="./assets/images/breakRepair.jpg" width="150px" height="150px" alt="freios">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -187,7 +187,7 @@
                 <div class="card-service shadow-lg rounded card-oleo">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/oil.jpg" alt="oleo">
+                        <img src="./assets/images/oil.jpg" width="150px" height="150px" alt="oleo">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -202,7 +202,7 @@
                 </div>
                 <div class="card-service shadow-lg rounded card-aliment">
                     <div class="card-service-img">
-                        <img src="./assets/images/suspension.jpg" alt="suspensão">
+                        <img src="./assets/images/suspension.jpg" width="150px" height="150px" alt="suspensão">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -218,7 +218,7 @@
                 <div class="card-service shadow-lg rounded card-pneu">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/pneu.jpg" alt="pneu">
+                        <img src="./assets/images/pneu.jpg" width="150px" height="150px" alt="pneu">
 
                     </div>
                     <div class="card-service-detail">
@@ -235,7 +235,7 @@
                 <div class="card-service shadow-lg rounded card-amortecedor">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/amortecedor.jpg" alt="amortecedor">
+                        <img src="./assets/images/amortecedor.jpg" width="150px" height="150px" alt="amortecedor">
 
                     </div>
                     <div class="card-service-detail">
@@ -251,7 +251,7 @@
                 <div class="card-service shadow-lg rounded card-bucha">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/bucha.jpg" alt="bucha">
+                        <img src="./assets/images/bucha.jpg" width="150px" height="150px" alt="bucha">
 
                     </div>
                     <div class="card-service-detail">
