--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rajdhani:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet" as="font" media="print" onload="this.media='all'" >
+        rel="stylesheet" as="font" media="print" onload="this.media='all'">
     <!-- End Font -->
 
     <!-- Start Bootstrap -->
@@ -171,7 +171,7 @@
                 <div class="card-service shadow-lg rounded card-representation">
 
                     <div class="card-service-img ">
-                        <img src="./assets/images/breakRepair.webp" alt="freios">
+                        <img src="./assets/images/breakRepair.webp" id="break-img" alt="freios">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -187,7 +187,7 @@
                 <div class="card-service shadow-lg rounded card-oleo">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/oil.webp" alt="oleo">
+                        <img src="./assets/images/oil.webp" id="oil-img" alt="oleo">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -202,7 +202,7 @@
                 </div>
                 <div class="card-service shadow-lg rounded card-aliment">
                     <div class="card-service-img">
-                        <img src="./assets/images/suspension.webp" alt="suspensão">
+                        <img src="./assets/images/suspension.webp" id="suspension-img" alt="suspensão">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -218,7 +218,7 @@
                 <div class="card-service shadow-lg rounded card-pneu">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/pneu.webp" alt="pneu">
+                        <img src="./assets/images/pneu.webp" id="pneu-img" alt="pneu">
 
                     </div>
                     <div class="card-service-detail">
@@ -235,7 +235,7 @@
                 <div class="card-service shadow-lg rounded card-amortecedor">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/amortecedor.webp" alt="amortecedor">
+                        <img src="./assets/images/amortecedor.webp" id="amortecedor-img" alt="amortecedor">
 
                     </div>
                     <div class="card-service-detail">
@@ -251,7 +251,7 @@
                 <div class="card-service shadow-lg rounded card-bucha">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/bucha.webp" alt="bucha">
+                        <img src="./assets/images/bucha.webp" id="bucha-img" alt="bucha">
 
                     </div>
                     <div class="card-service-detail">
@@ -562,6 +562,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js" defer></script>
     <script src="https://kit.fontawesome.com/0c233eeafa.js" crossorigin="anonymous" defer></script>
     <script src="assets/bootstrap/js/bootstrap.min.js" defer></script>
+    <script src="assets/js/images.js" defer></script>
     <script src="assets/js/owl.js" defer></script>
     <script src="assets/js/header.js" defer></script>
     <script src="assets/js/gsap.js" defer></script>
