--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </button> -->
             </div>
             <div class="p-0">
-                <img src="./assets/images/bestService.jpg" alt="visao">
+                <img src="./assets/images/bestService.webp" alt="visao">
                 <div class="result-guarantee-blur"></div>
             </div>
 
@@ -332,7 +332,7 @@
         </section>
         <section class="best-services" id="values">
             <div class="p-0 best-service-image">
-                <img src="./assets/images/result.jpg" alt="valores">
+                <img src="./assets/images/result.webp" alt="valores">
                 <div class="best-services-blur"></div>
             </div>
             <div class="best-services-body">
