--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="card-service shadow-lg rounded card-representation">
 
                     <div class="card-service-img ">
-                        <img src="./assets/images/breakRepair.webp" id="break-img" alt="freios">
+                        <img src="./assets/images/breakRepair.webp" id="break-img" alt="freios" loading="lazy">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -187,7 +187,7 @@
                 <div class="card-service shadow-lg rounded card-oleo">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/oil.webp" id="oil-img" alt="oleo">
+                        <img src="./assets/images/oil.webp" id="oil-img" alt="oleo" loading="lazy">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -202,7 +202,7 @@
                 </div>
                 <div class="card-service shadow-lg rounded card-aliment">
                     <div class="card-service-img">
-                        <img src="./assets/images/suspension.webp" id="suspension-img" alt="suspensão">
+                        <img src="./assets/images/suspension.webp" id="suspension-img" alt="suspensão" loading="lazy">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -218,7 +218,7 @@
                 <div class="card-service shadow-lg rounded card-pneu">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/pneu.webp" id="pneu-img" alt="pneu">
+                        <img src="./assets/images/pneu.webp" id="pneu-img" alt="pneu" loading="lazy">
 
                     </div>
                     <div class="card-service-detail">
@@ -235,7 +235,7 @@
                 <div class="card-service shadow-lg rounded card-amortecedor">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/amortecedor.webp" id="amortecedor-img" alt="amortecedor">
+                        <img src="./assets/images/amortecedor.webp" id="amortecedor-img" alt="amortecedor" loading="lazy">
 
                     </div>
                     <div class="card-service-detail">
@@ -251,7 +251,7 @@
                 <div class="card-service shadow-lg rounded card-bucha">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/bucha.webp" id="bucha-img" alt="bucha">
+                        <img src="./assets/images/bucha.webp" id="bucha-img" alt="bucha" loading="lazy">
 
                     </div>
                     <div class="card-service-detail">
@@ -287,7 +287,7 @@
                 </button> -->
             </div>
             <div class="p-0">
-                <img src="./assets/images/bestService.webp" alt="visao">
+                <img src="./assets/images/bestService.webp" alt="visao" loading="lazy">
                 <div class="result-guarantee-blur"></div>
             </div>
 
@@ -332,7 +332,7 @@
         </section>
         <section class="best-services" id="values">
             <div class="p-0 best-service-image">
-                <img src="./assets/images/result.webp" alt="valores">
+                <img src="./assets/images/result.webp" alt="valores" loading="lazy">
                 <div class="best-services-blur"></div>
             </div>
             <div class="best-services-body">
@@ -383,7 +383,7 @@
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
                                 <img src="https://lh3.googleusercontent.com/a/ACg8ocKg7Pk8vwF9vQTRRKBdBKH7ClqclYCb1oU7heNU5Cvve8zn8g=w250-h250-p-rp-mo-br100"
-                                    class="d-block w-100" alt="Fabricio">
+                                    class="d-block w-100" alt="Fabricio" loading="lazy">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -402,7 +402,7 @@
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
                                 <img src="https://lh3.googleusercontent.com/a-/ALV-UjUD9tu9h-AcvEHOAVEftrIudtGD_8Il0aAdIhzYzqTzXbSdRTl7=w250-h250-p-rp-mo-br100"
-                                    class="d-block w-100" alt="Lucas">
+                                    class="d-block w-100" alt="Lucas" loading="lazy">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -419,7 +419,7 @@
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
                                 <img src="https://lh3.googleusercontent.com/a/ACg8ocJ_XxVDsQcuZAD4_fIDCB0i2DC0N_mpvH04byRVx-0G4SvT7Q=w250-h250-p-rp-mo-br100"
-                                    class="d-block w-100" alt="Leticia">
+                                    class="d-block w-100" alt="Leticia" loading="lazy">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -438,7 +438,7 @@
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
                                 <img src="https://lh3.googleusercontent.com/a-/ALV-UjWdtpV7lzzaAEQwQZpX5oRLDBHiR5sIDhiWGlTPS7yT5EOqNhBIAg=w250-h250-p-rp-mo-br100"
-                                    class="d-block w-100" alt="leilane">
+                                    class="d-block w-100" alt="leilane" loading="lazy">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -457,7 +457,7 @@
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
                                 <img src="https://lh3.googleusercontent.com/a-/ALV-UjXIdfwGK5f8yNNoM72pPA9AEKN-nFgIM7w9B8RGzc7D_Mwq_XkK=w250-h250-p-rp-mo-br100"
-                                    class="d-block w-100" alt="anderson">
+                                    class="d-block w-100" alt="anderson" loading="lazy">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -475,7 +475,7 @@
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
                                 <img src="https://lh3.googleusercontent.com/a-/ALV-UjWRb5v0z7L9FGMeAXD3fJ55nFuFvl7gRY6Vpki5bljaRVjwXmfQ=w250-h250-p-rp-mo-br100"
-                                    class="d-block w-100" alt="Marta">
+                                    class="d-block w-100" alt="Marta" loading="lazy">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
