--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
     <!-- End Owl Carousel -->
 
     <!-- Start Style -->
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/aboutus.css">
-    <link rel="stylesheet" href="assets/css/bestservices.css">
-    <link rel="stylesheet" href="assets/css/resultguarantee.css">
-    <link rel="stylesheet" href="assets/css/ouradvantages.css">
-    <link rel="stylesheet" href="assets/css/ourservice.css">
-    <link rel="stylesheet" href="assets/css/clients.css">
-    <link rel="stylesheet" href="assets/css/whatoffer.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/reset.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/style.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/owl.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/header.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/aboutus.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/bestservices.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/resultguarantee.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/ouradvantages.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/ourservice.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/clients.css">
+    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/whatoffer.css">
     <!-- End Style -->
 </head>
 
