--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
     </header>
     <main>
         <section class="owl-carousel owl-theme">
-            <div class="item" style="background-image: url(/assets/images/banner3/banner1.jpg);">
+            <div class="item" style="background-image: url(/assets/images/banner/banner1.webp);">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner3/banner2.jpg);">
+            <div class="item" style="background-image: url(/assets/images/banner/banner2.webp);">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner3/banner3.jpg);">
+            <div class="item" style="background-image: url(/assets/images/banner/banner3.webp);">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner3/banner4.jpg);">
+            <div class="item" style="background-image: url(/assets/images/banner/banner4.webp);">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner3/banner5.jpg);">
+            <div class="item" style="background-image: url(/assets/images/banner/banner5.webp);">
             </div>
         </section>
         <section class="about-us" id="about">
