--- a/index.html
+++ b/index.html
@@ -52,17 +52,28 @@
     <!-- End Owl Carousel -->
 
     <!-- Start Style -->
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/reset.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/style.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/owl.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/header.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/aboutus.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/bestservices.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/resultguarantee.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/ouradvantages.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/ourservice.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/clients.css">
-    <link rel="preload"  as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/css/whatoffer.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/reset.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/style.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/owl.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/header.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/aboutus.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/bestservices.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/resultguarantee.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/ouradvantages.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/ourservice.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/clients.css">
+    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet"
+        href="assets/css/whatoffer.css">
     <!-- End Style -->
 </head>
 
@@ -127,15 +138,20 @@
     </header>
     <main>
         <section class="owl-carousel owl-theme">
-            <div class="item" style="background-image: url(/assets/images/banner/banner1.webp);">
+            <div class="item">
+                <img src="/assets/images/banner1/banner1.webp" class="img-banner" alt="banner1">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner/banner2.webp);">
+            <div class="item">
+                <img src="/assets/images/banner1/banner2.webp" class="img-banner" alt="banner2" loading="lazy">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner/banner3.webp);">
+            <div class="item">
+                <img src="/assets/images/banner1/banner3.webp" class="img-banner" alt="banner3" loading="lazy">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner/banner4.webp);">
+            <div class="item">
+                <img src="/assets/images/banner1/banner4.webp" class="img-banner" alt="banner4" loading="lazy">
             </div>
-            <div class="item" style="background-image: url(/assets/images/banner/banner5.webp);">
+            <div class="item">
+                <img src="/assets/images/banner1/banner5.webp" class="img-banner" alt="banner5" loading="lazy">
             </div>
         </section>
         <section class="about-us" id="about">
@@ -235,7 +251,8 @@
                 <div class="card-service shadow-lg rounded card-amortecedor">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/amortecedor.webp" id="amortecedor-img" alt="amortecedor" loading="lazy">
+                        <img src="./assets/images/amortecedor.webp" id="amortecedor-img" alt="amortecedor"
+                            loading="lazy">
 
                     </div>
                     <div class="card-service-detail">
