--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <main>
         <section class="owl-carousel owl-theme">
             <div class="item">
-                <img src="/assets/images/banner1/banner1.webp" class="img-banner" alt="banner1">
+                <img src="/assets/images/banner1/banner1.webp" class="img-banner" alt="banner1" loading="lazy">
             </div>
             <div class="item">
                 <img src="/assets/images/banner1/banner2.webp" class="img-banner" alt="banner2" loading="lazy">
