--- a/index.html
+++ b/index.html
@@ -579,9 +579,9 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js" defer></script>
     <script src="https://kit.fontawesome.com/0c233eeafa.js" crossorigin="anonymous" defer></script>
     <script src="assets/bootstrap/js/bootstrap.min.js" defer></script>
-    <script src="assets/js/images.min.js" defer></script>
-    <script src="assets/js/owl.min.js" defer></script>
-    <script src="assets/js/gsap.min.js" defer></script>
+    <script src="assets/js/images.js" defer></script>
+    <script src="assets/js/owl.js" defer></script>
+    <script src="assets/js/gsap.js" defer></script>
 </body>
 
 </html>
