--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <!-- End Font -->
 
     <!-- Start Bootstrap -->
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="assets/fontawesome/css/fontawesome.min.css"> -->
+    <link  rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <!-- <link  rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/fontawesome/css/fontawesome.min.css"> -->
     <!-- End Bootstrap -->
 
     <!-- Start Owl Carousel -->
-    <link rel="stylesheet" href="assets/OwlCarousel/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/OwlCarousel/dist/assets/owl.theme.default.min.css">
+    <link  rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/OwlCarousel/dist/assets/owl.carousel.min.css">
+    <link  rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" href="assets/OwlCarousel/dist/assets/owl.theme.default.min.css">
     <!-- End Owl Carousel -->
 
     <!-- Start Style -->
