--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Reparação de freios, Troca de óleo, Alinhamento e Balanceamento, Reparação de pneu, Troca de Amortecedores, Troca de Buchas e Bandejas">
 
-    <title>Carv Auto Center</title>
+    <title>Carv Auto Center Avaré</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
